# cm-mcp

./: .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  supervisord.conf
.devcontainer/: devcontainer.json  docker-compose.yml
ask-uos-mcp/: Dockerfile  client.py  exceptions.py  pyproject.toml  server.py
ask-uos-mcp/config/: ask_mcp_config.example.yml  core_config.py  models.py
ask-uos-mcp/db/: redis_pool.py
ask-uos-mcp/tools/: web_sarch_tool.py
ask-uos-mcp/utils/: tool_helpers.py
db-mcp/: Dockerfile  pyproject.toml
db-mcp/src/: app_auth.py  client.py  http_client.py  server.py
db-mcp/src/config/: allowed_tables.example.yaml
log_conf/: logger_setup.py
src/: http_client.py  server.py
