[project]
name = "ask-uos-mcp"
version = "0.1.0"
description = "Ask Osnabrück University MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp",
    "aiohttp>=3.13.3",
    "asyncpg",
    "pyyaml",
    "python-dotenv",
    "uvicorn>=0.40.0",
    "py-key-value-aio[redis]>=0.3.0",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
]
